--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=TestSonarQube:main
+sonar.projectKey=sammytran90_TestSonarQube
 sonar.organization=sammytran90
 # sonar.projectName=<project name>
 # sonar.projectVersion=<project version>
